WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125010
Fix build warning in EventHandler.cpp
https://bugs.webkit.org/show_bug.cgi?id=125010
Summary
Fix build warning in EventHandler.cpp
Tibor Mészáros
Reported
2013-11-29 06:16:06 PST
There is an unused parameter warning in EventHandler.cpp.
Attachments
Patch
(1.08 KB, patch)
2013-11-29 06:50 PST
,
Tibor Mészáros
ossy
: review+
ossy
: commit-queue-
Details
Formatted Diff
Diff
Patch v2
(1.02 KB, patch)
2013-11-29 07:51 PST
,
Tibor Mészáros
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tibor Mészáros
Comment 1
2013-11-29 06:50:04 PST
Created
attachment 218058
[details]
Patch Patch for the unused parameter warning in Eventhandler.cpp.
Csaba Osztrogonác
Comment 2
2013-11-29 07:42:29 PST
Comment on
attachment 218058
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=218058&action=review
> Source/WebCore/ChangeLog:9 > + There was a build warning in EventHandler.cpp > +
Please remove this redundant comment.
Tibor Mészáros
Comment 3
2013-11-29 07:51:36 PST
Created
attachment 218066
[details]
Patch v2 Removed the redundant comment.
WebKit Commit Bot
Comment 4
2013-12-02 01:56:13 PST
Comment on
attachment 218066
[details]
Patch v2 Clearing flags on attachment: 218066 Committed
r159921
: <
http://trac.webkit.org/changeset/159921
>
WebKit Commit Bot
Comment 5
2013-12-02 01:56:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug