Fix build warning in EventHandler.cpp https://bugs.webkit.org/show_bug.cgi?id=125010

Patch by Tibor Meszaros <mtibor@inf.u-szeged.hu> on 2013-12-02
Reviewed by Csaba Osztrogonác.

* page/EventHandler.cpp:
(WebCore::EventHandler::eventInvertsTabsToLinksClientCallResult):

Canonical link: https://commits.webkit.org/143166@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159921 268f45cc-cd09-0410-ab3c-d52691b4dbfc